--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>https://www.dodota.ml</title>
+<title>https://www.dodota.cf</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,9 +10,9 @@
 <script src="assets/js/modernizer.js"></script>
 <script>window.history.pushState('', '', '/home');</script>
 <META NAME="ROBOTS" CONTENT="NOARCHIVE">
-<link rel="canonical" href="https://www.dodota.ml/"/>
-<meta name="description" content="https://www.dodota.ml"/>
-<meta name="keywords" content="https://www.dodota.ml"/>
+<link rel="canonical" href="https://www.dodota.cf/"/>
+<meta name="description" content="https://www.dodota.cf"/>
+<meta name="keywords" content="https://www.dodota.cf"/>
 <style type="text/css">
 #freecssfooter{display:block;width:100%;padding:120px 0 20px;overflow:hidden;background-color:transparent;z-index:5000;text-align:center;}
 #freecssfooter div#fcssholder div{display:none;}
@@ -20,7 +20,7 @@
 #freecssfooter div#fcssholder div:first-child a{float:none;margin:0 auto;}
 </style></head>
 <body class="host_version">
-<img src="slider-03.jpg">
+<img src="slider-04.jpg">
 <div style="display:none;">
 <a href='https://www.gyrojob.com'>job</a><br>
 
@@ -154,7 +154,7 @@
             <div class="row">
               <div class="col-md-12 col-sm-12 text-right">
                 <div class="big-tagline">
-                  <h2><strong>https://www.dodota.ml</h2>
+                  <h2><strong>https://www.dodota.cf</h2>
                   </div>
               </div>
             </div>
