--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>https://www.dodota.gq</title>
+<title>https://www.dodota.ml</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,9 +10,9 @@
 <script src="assets/js/modernizer.js"></script>
 <script>window.history.pushState('', '', '/home');</script>
 <META NAME="ROBOTS" CONTENT="NOARCHIVE">
-<link rel="canonical" href="https://www.dodota.gq/"/>
-<meta name="description" content="https://www.dodota.gq"/>
-<meta name="keywords" content="https://www.dodota.gq"/>
+<link rel="canonical" href="https://www.dodota.ml/"/>
+<meta name="description" content="https://www.dodota.ml"/>
+<meta name="keywords" content="https://www.dodota.ml"/>
 <style type="text/css">
 #freecssfooter{display:block;width:100%;padding:120px 0 20px;overflow:hidden;background-color:transparent;z-index:5000;text-align:center;}
 #freecssfooter div#fcssholder div{display:none;}
@@ -154,7 +154,7 @@
             <div class="row">
               <div class="col-md-12 col-sm-12 text-right">
                 <div class="big-tagline">
-                  <h2><strong>https://www.dodota.gq</h2>
+                  <h2><strong>https://www.dodota.ml</h2>
                   </div>
               </div>
             </div>
